refactor: show semantics even if propagation fails